# softwarerenderer

./: .gitignore  CMakeLists.txt  compile_commands.json
src/: .clang  attributes.hpp  buffer2d.cpp  buffer2d.hpp  buffer2d_def.hpp  buffer2d_impl.hpp  buffer2d_impl.hpp~  buffer2d_test.cpp  compile_commands.json  dump.hpp  integrate_test.cpp  model.cpp  model.hpp  model_test.cpp  old_test.cpp  raster.cpp  raster.hpp  raster_impl.hpp  raster_test.cpp  render.cpp  render.hpp  render_impl.hpp  render_test.cpp  rvalue.cpp  scratch.cpp  shaders.hpp  targa.cpp  targa.hpp  targa_test.cpp  thinking.txt  util.hpp
